package com.tp.poo.backend.model;

public abstract class Figure {

    public abstract String toString();

}
